--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-  <string name="app_name">ro-player</string>
+  <string name="app_name">Radiorder</string>
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
   
-  <string moduleConfig="true" name="CodePushDeploymentKey">67eKvaZEfMA7oraitKC_qOIosfdusNVMlEw5Q</string>
+  <string moduleConfig="true" name="CodePushDeploymentKey">k3ti1l1QSug04Cv-EJc5chfypRPxED_BI_9dn</string>
   
 </resources>
